k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pogo-system
  labels:
    name: pogo-system
    app: pogo-community
